generate python protos

--- a/proto/bodybuildingcom/BUILD
+++ b/proto/bodybuildingcom/BUILD
@@ -18,3 +18,21 @@ proto_library(
   name = "equipment_proto",
   srcs = ["equipment.proto"],
 )
+
+py_library(
+  name = "equipment_pb2_py",
+  srcs = ["equipment_pb2.py"],
+  visibility = ["//visibility:public"],
+)
+
+py_library(
+  name = "exercise_pb2_py",
+  srcs = ["exercise_pb2.py"],
+  visibility = ["//visibility:public"],
+)
+
+py_library(
+  name = "muscle_pb2_py",
+  srcs = ["muscle_pb2.py"],
+  visibility = ["//visibility:public"],
+)
