convert generated python protos to build rules

--- a/proto/bodybuildingcom/BUILD
+++ b/proto/bodybuildingcom/BUILD
@@ -1,13 +1,5 @@
 load("@rules_proto//proto:defs.bzl", "proto_library")
-
-proto_library(
-  name = "exercise_proto",
-  srcs = ["exercise.proto"],
-  deps = [
-    "//proto/bodybuildingcom:equipment_proto",
-    "//proto/bodybuildingcom:muscle_proto",
-  ],
-)
+load("@com_google_protobuf//:protobuf.bzl", "py_proto_library")
 
 proto_library(
   name = "muscle_proto",
@@ -19,20 +11,33 @@ proto_library(
   srcs = ["equipment.proto"],
 )
 
-py_library(
+proto_library(
+  name = "exercise_proto",
+  srcs = ["exercise.proto"],
+  deps = [
+    "//proto/bodybuildingcom:equipment_proto",
+    "//proto/bodybuildingcom:muscle_proto",
+  ],
+)
+
+py_proto_library(
   name = "equipment_pb2_py",
-  srcs = ["equipment_pb2.py"],
+  srcs = ["equipment.proto"],
   visibility = ["//visibility:public"],
 )
 
-py_library(
+py_proto_library(
   name = "exercise_pb2_py",
-  srcs = ["exercise_pb2.py"],
+  srcs = ["exercise.proto"],
+  deps = [
+    "//proto/bodybuildingcom:equipment_pb2_py",
+    "//proto/bodybuildingcom:muscle_pb2_py",
+  ],
   visibility = ["//visibility:public"],
 )
 
-py_library(
+py_proto_library(
   name = "muscle_pb2_py",
-  srcs = ["muscle_pb2.py"],
+  srcs = ["muscle.proto"],
   visibility = ["//visibility:public"],
 )
