--- a/datasets/exercise/BUILD
+++ b/datasets/exercise/BUILD
@@ -3,3 +3,9 @@ filegroup(
   srcs = ["enrichment.csv"],
   visibility = ["//visibility:public"],
 )
+
+filegroup(
+  name = "aliases_txt",
+  srcs = ["aliases.txt"],
+  visibility = ["//visibility:public"],
+)
